--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="three">3</string>
     <string name="two">2</string>
     <string name="one">1</string>
+    <string name="image_view_content_description">TODO</string>
 </resources>
