- Changed the application id. - Changed the application icon. - Uploaded the signed APK.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Currency Converter Location Based</string>
+    <string name="app_name">LCurrency Converter</string>
     <string name="backspace">⌫</string>
     <string name="zero">0</string>
     <string name="empty" />
